demos/multi-team/team-a/app-repo/k8s/1_namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app-a
  labels:
    single-cluster-gateway: "true"
