demos/multi-team/team-a/app-repo/k8s/2_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-a
  namespace: app-a
spec:
  selector:
    matchLabels:
      app: app-a
      version: "1"
  replicas: 1 
  template:
    metadata:
      labels:
        app: app-a
        version: "1"
    spec:
      containers:
      - name: app-a
        image: europe-west4-docker.pkg.dev/gateway-demos/demos/app:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
