demos/multi-team/team-a/app-repo/k8s/3_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-a-service-version-1
  namespace: app-a
spec:
  selector:
    app: app-a
    version: "1"
  ports:
    - name: http
      port: 80
      targetPort: 8080
